p2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web  # Point d'entrée pour Traefik
    traefik.ingress.kubernetes.io/rule-type: Path          # Type de règle pour un chemin exact
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: app-one
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: app-two
                port:
                  number: 80
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: app-three
                port:
                  number: 80
    # Redirection par défaut
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three
                port:
                  number: 80
